# uol-grades-calculator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: Makefile  commands.rst  conf.py  config_file.csv  developers.rst  index.rst  introduction.rst
docs/_static/css/: custom.css
docs/source/: modules.rst  ugc.rst  ugc.utils.rst  uol_grades_calculator.rst  uol_grades_calculator.utils.rst
src/: config.yml  grades-template.json  grades-template.yml  grades.py
src/tests/: conftest.py
src/tests/fixtures/json/: bad_format.json
src/utils/: mathtools.py
tests/: conftest.py  test_commands.py  test_config.py  test_grades.py  test_grades_helpers.py
tests/fixtures/yaml/: bad_format.yml  levels.yml  modules_in_progress.yml  partial_grades_inaccurate.yml
tests/utils/: test_mathtools.py
ugc/: __init__.py  __main__.py  cli.py  commands.py  config.py  errors.py  grades-template.json  grades-template.yml  grades.py  short_module_names.json
ugc/utils/: cli_helpers.py  commands_helpers.py  grades_helpers.py  mathtools.py
uol_grades_calculator/: __init__.py  __main__.py  __version__.py  cli.py  commands.py  config.py  grades-template.yml  grades.py
uol_grades_calculator/utils/: commands_helpers.py  grades_helpers.py
