[metadata]
name = uol-grades-calculator
version = attr: ugc.__version__
description = Grades calculator for the BSc Computer Science at the University of London
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sglavoie/uol-grades-calculator
author = Sébastien Lavoie
author_email = sebastien@lavoie.dev
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Documentation :: Sphinx
project_urls =
    Documentation = https://uol-grades-calculator.readthedocs.io
    Source = https://github.com/sglavoie/uol-grades-calculator
    Tracker = https://github.com/sglavoie/uol-grades-calculator/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    Click
    PyYAML
python_requires = >=3.7

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    ugc = ugc.cli:cli

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-cov
all =
    %(test)s